account-data/Reishi-Narisada/eu-west-3/ec2-describe-network-acls.json
{
    "NetworkAcls": [
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-736bdb1a",
                    "NetworkAclId": "acl-ab15d2c2",
                    "SubnetId": "subnet-2fc10446"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-756bdb1c",
                    "NetworkAclId": "acl-ab15d2c2",
                    "SubnetId": "subnet-a80539e2"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-726bdb1b",
                    "NetworkAclId": "acl-ab15d2c2",
                    "SubnetId": "subnet-265b425e"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-ab15d2c2",
            "OwnerId": "416817624313",
            "Tags": [],
            "VpcId": "vpc-2e58a147"
        }
    ]
}
